crates/solidity/testing/snapshots/bindings_output/control/unchecked/generated/0.5.3-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected AddressKeyword or AssemblyKeyword or BoolKeyword or BreakKeyword or ByteKeyword or BytesKeyword or CloseBrace or ContinueKeyword or DecimalLiteral or DoKeyword or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or EmitKeyword or FalseKeyword or FixedKeyword or ForKeyword or FunctionKeyword or HexLiteral or Identifier or IfKeyword or IntKeyword or MappingKeyword or NewKeyword or OpenBrace or OpenBracket or OpenParen or ReturnKeyword or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or StringKeyword or SuperKeyword or ThisKeyword or TrueKeyword or TypeKeyword or UfixedKeyword or UintKeyword or WhileKeyword.
   ╭─[input.sol:4:9]
   │
 4 │ ╭─▶         unchecked { return c - b; }
 5 │ ├─▶     }
   │ │           
   │ ╰─────────── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── def: 1
 2 │     function sub(uint a, uint b) public returns (uint) {
   │              ─┬─      ┬       ┬  
   │               ╰────────────────── def: 2
   │                       │       │  
   │                       ╰────────── def: 3
   │                               │  
   │                               ╰── def: 4
 3 │         uint c = a;
   │              ┬   ┬  
   │              ╰────── def: 5
   │                  │  
   │                  ╰── ref: 3
───╯
